[package]
name = "altered_perception"
version = "0.2.0"
edition = "2021"
authors = ["Antonio Aguilar"]
include = ["src", "Cargo.toml", "README.md", "LICENSE"]
description = "`struct HSV/Luma/etc.` for sharing pixels between crates + other pixel manipulations"
readme = "README.md"
keywords = ["hsv", "luma", "rgb", "pixel", "color"]
license = "MIT"
categories = ["graphics", "rust-patterns", "multimedia::images"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dev-dependencies]
rayon = "1.6.1"

[dependencies]
num-traits = "0.2"
rgb = "0.8.34"
serde = "1.0.152"
serde_derive = "1.0.152"